--- a/tabor.html
+++ b/tabor.html
@@ -49,12 +49,12 @@
             <h3 class="section__heading section__heading--red">Základní informace:</h3>
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech(pondělí až pátek)</li>
-                <li class="list_tabor__item">každý den začína v 9:00 a končí v 17:00 v areálu naší stáje
+                <li class="list_tabor__item">každý den začína v 8:00 a končí v 16:00 v areálu naší stáje
                     Adresa: pod strání 131, Stráž nad Nisou</li>
                 <li class="list_tabor__item">během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
-                    5 míst)</li>
+                    8 míst)</li>
                 <li class="list_tabor__item">po celou dobu budeme k zastižení</li>
             </ul>
 
@@ -82,13 +82,23 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item ">4 500,-/turnus (1 dítě)</li>
                 <li class="list_tabor__item">platba musí být provedena do <span
-                        class="list_tabor__item--bold">10.6</span></li>
+                        class="list_tabor__item--bold">5.6.2024</span></li>
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
                         class="list_tabor__item--bold">670100-2216887260/6210</span> (do zprávy pro příjemce uveďte
                     jméno dítěte a číslo turnusu)</li>
             </ul>
+        </section>
+        <section class="section section_tabor section--line">
+            <h3 class="section__heading section__heading--red">Turnusy:</h3>
+            <ol class="section__list list_tabor order_list" start="">
+                <li class="order_list__item list_tabor__item">1.7 - 5.7.</li>
+                <li class="order_list__item list_tabor__item">8.7 - 12.7.</li>
+                <li class="order_list__item list_tabor__item">15.7 - 19.7.</li>
+                <li class="order_list__item list_tabor__item">22.7 - 26.7.</li>
+                <li class="order_list__item list_tabor__item">5.8 - 9.8.</li>
+            </ol>
         </section>
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Způsoby přihlášení dítěte:</h3>
