--- a/akce.html
+++ b/akce.html
@@ -18,30 +18,40 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="header__nav nav">
-            <div class="nav__bar">
-
-                <a class="button_hamburger" href="javascript:void(0);" onclick="myFunction()"></a>
+    <a href="">
+        <header class="header header--letak">
+            <nav class="header__nav nav">
+                <div class="nav__bar">
+    
+                    <a class="button_hamburger" href="javascript:void(0);" onclick="myFunction()"></a>
+                </div>
+                <menu id="myLinks" class="menu hidden">
+                    <li class="menu__item"><a class="button menu__button" href="index.html#uvod">Úvod</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="sluzby.html#sluzby">Služby</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="akce.html#akce">Akce</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="kone.html#kone">Koně</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="tabor.html#tabor">Příměstský tábor</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="cenik.html#cenik">Ceník</a></li>
+                    <li class="menu__item"><a class="button menu__button" href="kontakt.html#kontakt">Kontakt</a></li>
+                </menu>
+            </nav>
+    
+            <div class="head_img">
+                <h1 class="head_img__text">JEZDECKÁ SPOLEČNOST VYDLÁKOV - AKCE</h1>
             </div>
-            <menu id="myLinks" class="menu hidden">
-                <li class="menu__item"><a class="button menu__button" href="index.html#uvod">Úvod</a></li>
-                <li class="menu__item"><a class="button menu__button" href="sluzby.html#sluzby">Služby</a></li>
-                <li class="menu__item"><a class="button menu__button" href="akce.html#akce">Akce</a></li>
-                <li class="menu__item"><a class="button menu__button" href="kone.html#kone">Koně</a></li>
-                <li class="menu__item"><a class="button menu__button" href="tabor.html#tabor">Příměstský tábor</a></li>
-                <li class="menu__item"><a class="button menu__button" href="cenik.html#cenik">Ceník</a></li>
-                <li class="menu__item"><a class="button menu__button" href="kontakt.html#kontakt">Kontakt</a></li>
-            </menu>
-        </nav>
-
-        <div class="head_img">
-            <h1 class="head_img__text">JEZDECKÁ SPOLEČNOST VYDLÁKOV - AKCE</h1>
-        </div>
-    </header>
+        </header>
+    </a>
 
     <main id="akce" class="main main_akce">
         <h2 class="main__heading main_akce__heading ">Akce</h2>
+        <section class="section_year">
+            <h3 class="section_year__heading">2024</h3>
+            <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Dětský den 8.6.2024</h4>
+                <p class="article_news__text">Opět se u nás pořádá dětský den. Všichni jsou srdečně zváni. Pro děi bude připraveno spoustu soutěží, také občerstvení a posezení. Děti se budou moct povozit na koni a vyhrát různé ceny. Těšíme se na Vás!</p>
+                <img src="./imgs/letak/Detsky den.png" alt="Letáček, který popusuje dětský den u koní, který se koná 8.6.2024">
+            </article>
+        </section>
         <section class="section_year">
             <h3 class="section_year__heading">2023</h3>
             <article class="section_year__article article_news">
