rozdělení webu akce

--- a/2018.html
+++ b/2018.html
@@ -43,33 +43,48 @@
 
     <main id="akce" class="main main_akce">
         <h2 class="main__heading main_akce__heading ">Akce</h2>
-         
-        <div class="select_year">
-            <div class="year_box">
-                <a href="2024.html#2024" class="year_box__text">2024</a>
-             </div>
-            <div class="year_box">
-                <a href="2023.html#2023" class="year_box__text">2023</a>
+        <section id="2018" class="section_year">
+            <h3 class="section_year__heading">2018</h3>
+            <div class="section_article__wrapper">
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Vánoční večírek</h4>
+                    <p class="article_news__text">V prosinci proběhl první Vánoční večírek naší stáje vydlákov.Všichni
+                        si to
+                        moc užili a těšíme se i na příští rok.</p>
+
+                    <div class="img_container article_news__imgs">
+                        <figure class="img_container__part img_container__part--sirka">
+                            <img src="./akce_foto/vanocni_vecirek_1_S.jpg"
+                                alt="Fotografie čokoládové fontánky, ktérá byla na našem vánočním večírku"
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                        <figure class="img_container__part">
+                            <img src="./akce_foto/vanocni_vecirek_2_S.jpg"
+                                alt="Fotografie Vánočního večírku, kterého se účastnili členové JS Vydlákov"
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                    </div>
+                </article>
+                <article class="section_year__article article_news">
+                    <h4 class="article_news__heading">Maškarní vyjížďka</h4>
+                    <p class="article_news__text">Na podzim 3.11 a 10.11 se konala každoroční, maškarní vyjížďka. Druhá
+                        skupina se vydala na Ještěd.</p>
+                    <p class="news_structure__member">Na Ještěd jsme jeli v sestavě:</p>
+                    <div class="article_news__structure news_structure">
+
+                        <p class="news_structure__member">Trollka - Nero</p>
+                        <p class="news_structure__member">Nikola - Karola</p>
+                        <p class="news_structure__member">Tína - Devron</p>
+                        <p class="news_structure__member">Eliška - Betyna</p>
+                        <p class="news_structure__member">Barča - Markus</p>
+                        <p class="news_structure__member">Martina - Bianca</p>
+                        <p class="news_structure__member">Andrejka - Monty</p>
+                    </div>
+                </article>
             </div>
-            <div class="year_box">
-                <a href="2022.html#2022" class="year_box__text">2022</a>
-            </div>
-            <div class="year_box">
-                <a href="2021.html#2021" class="year_box__text">2021</a>
-            </div>
-            <div class="year_box">
-                <a href="2020.html#2020" class="year_box__text">2020</a>
-            </div>
-            <div class="year_box">
-                <a href="2019.html#2019" class="year_box__text">2019</a>
-            </div>
-            <div class="year_box">
-                <a href="2018.html#2018" class="year_box__text">2018</a>
-            </div>
-        </div>
-        
+        </section>
     </main>
-    <footer class="footer">
+    <footer\\ class="footer">
         <p class="footer__heading">Jezdecká společnost Vydlákov</p>
         <ul class="footer__list list">
             <li class="list__item"><a href="index.html#uvod">Úvod</a></li>
