--- a/2024.html
+++ b/2024.html
@@ -43,31 +43,15 @@
 
     <main id="akce" class="main main_akce">
         <h2 class="main__heading main_akce__heading ">Akce</h2>
-         
-        <div class="select_year">
-            <div class="year_box">
-                <a href="2024.html#2024" class="year_box__text">2024</a>
-             </div>
-            <div class="year_box">
-                <a href="2023.html#2023" class="year_box__text">2023</a>
-            </div>
-            <div class="year_box">
-                <a href="2022.html#2022" class="year_box__text">2022</a>
-            </div>
-            <div class="year_box">
-                <a href="2021.html#2021" class="year_box__text">2021</a>
-            </div>
-            <div class="year_box">
-                <a href="2020.html#2020" class="year_box__text">2020</a>
-            </div>
-            <div class="year_box">
-                <a href="2019.html#2019" class="year_box__text">2019</a>
-            </div>
-            <div class="year_box">
-                <a href="2018.html#2018" class="year_box__text">2018</a>
-            </div>
-        </div>
-        
+        <section id="2024" class="section_year">
+            <section class="section_year">
+                <h3 class="section_year__heading">2024</h3>
+                <article id="detskyden2024" class="section_year__article article_news">
+                    <h4 class="article_news__heading">Dětský den 8.6.2024</h4>
+                    <p class="article_news__text">Opět se u nás pořádá dětský den. Všichni jsou srdečně zváni. Pro děi bude připraveno spoustu soutěží, také občerstvení a posezení. Děti se budou moct povozit na koni a vyhrát různé ceny. Těšíme se na Vás!</p>
+                    <img src="./imgs/letak/Detsky den.png" alt="Letáček, který popusuje dětský den u koní, který se koná 8.6.2024">
+                </article>
+            </section>
     </main>
     <footer class="footer">
         <p class="footer__heading">Jezdecká společnost Vydlákov</p>
