--- a/2023.html
+++ b/2023.html
@@ -43,30 +43,19 @@
 
     <main id="akce" class="main main_akce">
         <h2 class="main__heading main_akce__heading ">Akce</h2>
-         
-        <div class="select_year">
-            <div class="year_box">
-                <a href="2024.html#2024" class="year_box__text">2024</a>
-             </div>
-            <div class="year_box">
-                <a href="2023.html#2023" class="year_box__text">2023</a>
-            </div>
-            <div class="year_box">
-                <a href="2022.html#2022" class="year_box__text">2022</a>
-            </div>
-            <div class="year_box">
-                <a href="2021.html#2021" class="year_box__text">2021</a>
-            </div>
-            <div class="year_box">
-                <a href="2020.html#2020" class="year_box__text">2020</a>
-            </div>
-            <div class="year_box">
-                <a href="2019.html#2019" class="year_box__text">2019</a>
-            </div>
-            <div class="year_box">
-                <a href="2018.html#2018" class="year_box__text">2018</a>
-            </div>
-        </div>
+        <section id="2023" class="section_year">
+            <h3 class="section_year__heading">2023</h3>
+            <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Dětský příměstský tábor s koňmi</h4>
+                <div class="gallery"><iframe src="https://eu.zonerama.com/JSVydlakovtabory/Album/10079214" width="100%"
+                        height="100%" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p class="article_news__text">Už čtvrtým rokem se u nás pořádal dětský příměstský tábor. Tento turnus
+                    začal v pondělí 31.07 a končil v pátek 04.08. Tento týden měli ve svých rukou Tínka s Andrejkou.
+                    Tábor byl plný zábavy a děti si ho moc užili.</p>
+                <p class="article_news__text">Těšíme se na příští rok!</p>
+            </article>
+        </section>
         
     </main>
     <footer class="footer">
