--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
         <div class="section__wrapper">
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Kdo jsme?</h3>
-                <p class="section__text section__text--border">Jsme malá stáj, kde panuje přátelská atmosféra a vstřícný
-                    osobitý přístup. Poskytujeme základní, ale zdravé zázemí pro ustájení koní s respektem na jejich
-                    individualitu a temperament.Relaxační jezdci se zálibou ve výjížďkách u nás jistě ocení přírodu a
-                    různorodý terén v okolí, pokročilejší mohou zkusit tréninky. Pro opravdové nadšence máme členství v
-                    našem jezdeckém klubu.</p>
+                <p class="section__text section__text--border">Jsme malá jezdecká stáj, kde panuje přátelská atmosféra a vstřícný přístup. Poskytujeme zdravé zázemí a péči pro ustájené koně různého věku a zaměření. Naším hlavním posláním je jezdecká škola – systematická výuka jezdců začínající voltižními cviky na lonži až po úspěšné složení ZZVJ. Zkušení jezdci pak mohou počítat s účastí na parkurových závodech. Právě pro tyto opravdové nadšence nabízíme členství v našem jezdeckém klubu. Relaxační jezdci se zálibou ve vyjížďkách u nás jistě ocení přírodu a různorodý terén v okolí. </p>
                 <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./imgs/bianka_soran_jested_B.jpg"
                         alt="Fotografie dvou koní na louce, v pozadí je ještěd">
@@ -57,11 +53,7 @@
             </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
-                <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v
-                    ulici Pod Strání 131, na okraji průmyslové zóny Sever, nedaleko obchodního centra Glóbus. Stáj tak,
-                    díky dostupnosti autobusové zastávky (linka č. 14, č. 27, č. 600 zastávka Globus zadarmo), umožňuje
-                    všem návštěvníkům obklopit se přírodou, užít si zdravého pohybu a dobít energii, aniž by museli
-                    vyjet z města ven. </p>
+                <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v ulici Pod Strání 131 Stráž nad Nisou, na okraji průmyslové zóny Sever a nedaleko obchodního centra Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27, č. 600 zastávka Globus nebo Obchodní).</p>
                 <div class="section__map">
                     <iframe style="border:none" src="https://frame.mapy.cz/s/jocomucora" frameborder="0"></iframe>  
                 </div>
