--- a/cenik.html
+++ b/cenik.html
@@ -68,8 +68,8 @@
             </div>
 
             <div class="prize_item">
-                <h3 class="prize_item__heading">PRONAJETÍ PŘEPRAVNÍKU</h3>
-                <p class="prize_item__text">Pronajetí přepravníku pro koně</p>
+                <h3 class="prize_item__heading">PRONAJMUTÍ PŘEPRAVNÍKU - pro 2 koně</h3>
+                <p class="prize_item__text">Pronajmutí samotného přepravníku pro dva koně</p>
                 <p class="prize_item__prize prize_item__prize--line">600,-/den</p>
                 <div class="table">
                     <div class="table__item">Řidič</div>
