--- a/sluzby.html
+++ b/sluzby.html
@@ -88,7 +88,7 @@
                 <h3 class="section__heading section__heading--absolute">Členství</h3>
                 <p class="section__text section__text--border">Opravdové nadšence a milovníky koní radi uvítáme mezi námi, jako členy v našem jezdeckém klubu.</p>
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
-                            src="./imgs/společná_S.jpg" alt="Fotografie členů klubu stáje JS Vydlákov na zasněžené jízdárně"></a>
+                            src="./imgs/1718266779779a.JPG" alt="Fotografie členů klubu stáje JS Vydlákov na zasněžené jízdárně"></a>
                     <figcaption></figcaption>
                 </figure>
             </section>
