--- a/tabor.html
+++ b/tabor.html
@@ -40,7 +40,7 @@
     </header>
     <main id="tabor" class="main">
         <section class="section section_tabor">
-            <h2  class="section__heading">Přímestský tábor</h2>
+            <h2  class="section__heading">Příměstský tábor</h2>
             <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.</p>
             <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
                 naučit starat</p>
