--- a/kone.html
+++ b/kone.html
@@ -41,7 +41,7 @@
     </header>
     <main id="kone" class="main main_kone">
         <h2  class="main__heading main_kone__heading">Koně</h2>
-        <p class="main__ text main_kone__text">V současné době se u nás ve stáji nachází 20 koní</p>
+        <p class="main__ text main_kone__text">V současné době se u nás ve stáji nachází 21 koní</p>
         <ul class="small_nav">
             <li class="small_nav__item"><a class="button button_kone prize_button" href="#nasi">Naši koně</a></li>
             <li class="small_nav__item"><a class="button button_kone prize_button" href="#soukromi">soukromí koně</a>
@@ -355,7 +355,7 @@
                         <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
                                 narození:</span> 18.4.2004</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
-                            Český plnokrevník</p>
+                            Český teplokrevník</p>
                         <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 2749
                             Calypso</p>
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> JM 4108
@@ -373,7 +373,7 @@
                         <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
                                 narození:</span> 19.5.2012</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
-                            Slovenský plnokrevník</p>
+                            Slovenský teplokrevník</p>
                         <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> 623
                             Rubicon</p>
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span> 34341
