--- a/2023.html
+++ b/2023.html
@@ -45,6 +45,12 @@
         <h2 class="main__heading main_akce__heading ">Akce</h2>
         <section id="2023" class="section_year">
             <h3 class="section_year__heading">2023</h3>
+             <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Hubertova jízda</h4>
+                <p class="article_news__text">V sobotu 11.11.2023 se u nás ve stáji pořádala dlouho očekávaná Hubertova jízda. Na startu se sešlo celkem početné pole téměř 20 koní a jejich jezdců. Počasí se vydařilo. Po úvodní části jsme se všichni vydali na delší vyjížďku hezkou krajinou libereckého Karlova a Machnína. Sem tam na nás čekal skok, potůček anebo prudká stráň. Tuhle terénní zkoušku zvládli všichni a na poslední louce pak proběhl dostih o liščí ocas. Gratulujeme k němu Nikolce – nejmladší účastnici Huberta. 😊</p>
+                <p class="article_news__text">Po ošetření koní jsme se sešli v klubovně a zahřáli čajem a polévkou. Na památku dostal každý účastník červenou kokardu a teď už se těšíme na další ročník. </p>
+                <p class="article_news__text">Další foto zde: <a href="https://eu.zonerama.com/Fay16/Album/10659525">https://eu.zonerama.com/Fay16/Album/10659525</a></p>
+            </article>
             <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Dětský příměstský tábor s koňmi</h4>
                 <div class="gallery"><iframe src="https://eu.zonerama.com/JSVydlakovtabory/Album/10079214" width="100%"
