--- a/2023.html
+++ b/2023.html
@@ -52,10 +52,31 @@
                 <p class="article_news__text">Další foto zde: <a href="https://eu.zonerama.com/Fay16/Album/10659525">https://eu.zonerama.com/Fay16/Album/10659525</a></p>
                   <div class="img_container article_news__imgs">
                         <figure class="img_container__part">
-                            <img src="./akce_foto/rafty_S.jpg"
-                                alt="Fotografie našich členů, soukromašek, přátel a rodin na společném vyletě na raftech"
+                            <img src="./akce_foto/1718268138595.jpg"
+                                alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138623.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138646.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138667.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268441867.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      
                     </div>
             </article>
             <article class="section_year__article article_news">
