--- a/2023.html
+++ b/2023.html
@@ -46,6 +46,39 @@
         <section id="2023" class="section_year">
             <h3 class="section_year__heading">2023</h3>
              <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Hubertova jízda v maskách</h4>
+                <p class="article_news__text">Jen o týden později, 18.11. 2023, pořádáme dalšího Huberta. Ten není veřejný, je jen pro naše členy a podmínkou startu je vlastnoručně zhotovená maska pro jezdce nebo i koně, která musí vydržet celou vyjížďku. Jak jsem se dozvěděli, vymýšlení a výroba masek zabrala některým členkám dlouhé týdny. 😊 Na startu bylo celkem osm jezdkyň a jeden malý jezdec. Holky se domluvily a ztvárnily pohádkové skupiny – legendární Čtyřlístek a animovaný klub jezdců Horseland. Ani naše trenérka Martina se nenechala zahanbit a masku si připravila.</p>
+                <p class="article_news__text">I maskovaná děvčata spolu s maskovanou Martinou čekala delší vyjížďka, pár skoků a spoustu cválání. Každý, kdo nezvládne svého koně a předjede první Martinu, musí donést čokoládu. Letos se čokolád sešlo opravdu málo, což znamená, že jsou holky v sedle pořád lepší a lepší!!</p>
+                  <div class="img_container article_news__imgs">
+                        <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138595.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138623.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138646.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268138667.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      <figure class="img_container__part">
+                            <img src="./akce_foto/1718268441867.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                      
+                    </div>
+            </article>
+             <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hubertova jízda</h4>
                 <p class="article_news__text">V sobotu 11.11.2023 se u nás ve stáji pořádala dlouho očekávaná Hubertova jízda. Na startu se sešlo celkem početné pole téměř 20 koní a jejich jezdců. Počasí se vydařilo. Po úvodní části jsme se všichni vydali na delší vyjížďku hezkou krajinou libereckého Karlova a Machnína. Sem tam na nás čekal skok, potůček anebo prudká stráň. Tuhle terénní zkoušku zvládli všichni a na poslední louce pak proběhl dostih o liščí ocas. Gratulujeme k němu Nikolce – nejmladší účastnici Huberta. 😊</p>
                 <p class="article_news__text">Po ošetření koní jsme se sešli v klubovně a zahřáli čajem a polévkou. Na památku dostal každý účastník červenou kokardu a teď už se těšíme na další ročník. </p>
