--- a/2024.html
+++ b/2024.html
@@ -56,6 +56,11 @@
                     <p class="article_news__text">V sobotu 4.5.2024 jsme se zúčastnili hobby parkurových závodů, které pořádal JK Sobotka. Do Sobotky zavítáme vždy rádi, oceňujeme místní přívětivou atmosféru a skvělou organizaci. V parkuru do 60cm startovala Majda s Lordem a kurzem projeli bezchybně. Hned po ní startovala Johanka s Rockym a i oni předvedli čistý parkur s rychlým rozeskakováním, jež jim přineslo 5. místo.  V následujícím parkuru do 70cm startovala Majda s Devronem, Johanka se Saulem, Tína se Sávou a Lucka s Tedem. Všechny parkury byly bez jediného trestného bodu a čas rozeskakování přinesl Majdě a Devronovi 3. místo, Tině a Sávě 2. místo. Třetí soutěž byla s překážkami do 80 cm, té se zúčastnila Tina se Sávou, Lucka s Tedem, Klárka se Saulem a Verča s Devronem. Klárka a Verča nasbíraly bohužel po jedné smůlovaté chybě 4 trestné body, Lucka opět předvedla čistý parkur a i Tina čistý parkur zopakovala a rozeskakování ji tentokrát vyneslo 1. místo.
 Tak vydařené první závody v sezóně potvrzují připravenost našich koní a poníků a jezdecký růst startujících děvčat! Gratulace přišla i ze strany pořadatele. 😊</p>
                     <p class="article_news__text">Děkujeme JK Sobotka za výborně připravené závody a za hodnotné ceny.</p>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/1718268441727.jpg"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
                 </article>
             </section>
     </main>
