--- a/2024.html
+++ b/2024.html
@@ -57,7 +57,32 @@
 Tak vydařené první závody v sezóně potvrzují připravenost našich koní a poníků a jezdecký růst startujících děvčat! Gratulace přišla i ze strany pořadatele. 😊</p>
                     <p class="article_news__text">Děkujeme JK Sobotka za výborně připravené závody a za hodnotné ceny.</p>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/1718268441727.jpg"
+                            <img src="./akce_foto/majda_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/johana_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/klara_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/ted_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure> 
+                    <figure class="img_container__part">
+                            <img src="./akce_foto/tina_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/verca_sobotka2024"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
