--- a/2024.html
+++ b/2024.html
@@ -51,6 +51,46 @@
                     <p class="article_news__text">Opět se u nás pořádá dětský den. Všichni jsou srdečně zváni. Pro děi bude připraveno spoustu soutěží, také občerstvení a posezení. Děti se budou moct povozit na koni a vyhrát různé ceny. Těšíme se na Vás!</p>
                     <img src="./imgs/letak/Detsky den.png" alt="Letáček, který popusuje dětský den u koní, který se koná 8.6.2024">
                 </article>
+                 <article id="detskyden2024" class="section_year__article article_news">
+                    <h4 class="article_news__heading">Hobby závody v JC Jičín</h4>
+                    <p class="article_news__text">V sobotu 25. května jsme zavítali na hobby parkury do Jezdeckého centra Jičín. 
+Hned v zahajovací soutěži křížky 40/50 cm s následným rozeskakováním si poprvé vyzkoušely opravdové závodění Anetka s Lordem, Johanka D. s Rockym a Nikola se Zorrem. Všechny holky velmi dobře odjely základní parkur, Nikola a Zorro dokonce dokončili rozeskakování v čase, který jim vynesl 4. místo! 
+V parkuru 60/70 s následným rozeskakováním startovala Jana se Zorrem, Majda s Lordem, Johanka P. s Rockym, Verča s Devronem a Klárka se Saulem. Majda dojela do cíle ve výborném čase druhá, Jana třetí, Verča se umístila na šestém místě a Klárka osmá.  Velmi gratulujeme!
+Další byl parkur na 80cm na limitovaný čas, kde startovala Majda s Devronem a Johanka P. se Saulem. Majda dojela na 4. místě a Johanka P. dokončila bohužel s jednou chybou na skoku.
+V hobby parkurech byla ten den tradiční hojná účast, ale překvapilo nás málo startujících koní v oficiálních soutěžích. Přitom Jezdecké centrum Jičín je velmi příjemné závodiště, profesionálně organizované, s perfektním povrchem na kolbišti i opracovišti. Potěšily nás i moc hezké a hodnotné ceny umístěným startujícím a kokardy do 8. místa. 
+Je na místě poděkovat za všechny holky našemu podpůrnému týmu : děkujeme trenérce Martině za vedení doma v tréninku a podporu na kolbišti, dále děkujeme zejména řidičům z řad rodičů a prarodičů. Pochválit bych chtěla i to, že si rády pomůžeme mezi parkury jako ošetřovatelky. 
+Bez vás – nás by to nešlo!! 😊</p>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/majda_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/johana_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/klara_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/ted_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure> 
+                    <figure class="img_container__part">
+                            <img src="./akce_foto/tina_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/verca_sobotka2024"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                </article>
                 <article id="detskyden2024" class="section_year__article article_news">
                     <h4 class="article_news__heading">Hobby závody v JK Sobotka</h4>
                     <p class="article_news__text">V sobotu 4.5.2024 jsme se zúčastnili hobby parkurových závodů, které pořádal JK Sobotka. Do Sobotky zavítáme vždy rádi, oceňujeme místní přívětivou atmosféru a skvělou organizaci. V parkuru do 60cm startovala Majda s Lordem a kurzem projeli bezchybně. Hned po ní startovala Johanka s Rockym a i oni předvedli čistý parkur s rychlým rozeskakováním, jež jim přineslo 5. místo.  V následujícím parkuru do 70cm startovala Majda s Devronem, Johanka se Saulem, Tína se Sávou a Lucka s Tedem. Všechny parkury byly bez jediného trestného bodu a čas rozeskakování přinesl Majdě a Devronovi 3. místo, Tině a Sávě 2. místo. Třetí soutěž byla s překážkami do 80 cm, té se zúčastnila Tina se Sávou, Lucka s Tedem, Klárka se Saulem a Verča s Devronem. Klárka a Verča nasbíraly bohužel po jedné smůlovaté chybě 4 trestné body, Lucka opět předvedla čistý parkur a i Tina čistý parkur zopakovala a rozeskakování ji tentokrát vyneslo 1. místo.
