--- a/2024.html
+++ b/2024.html
@@ -61,32 +61,57 @@ V hobby parkurech byla ten den tradiční hojná účast, ale překvapilo nás 
 Je na místě poděkovat za všechny holky našemu podpůrnému týmu : děkujeme trenérce Martině za vedení doma v tréninku a podporu na kolbišti, dále děkujeme zejména řidičům z řad rodičů a prarodičů. Pochválit bych chtěla i to, že si rády pomůžeme mezi parkury jako ošetřovatelky. 
 Bez vás – nás by to nešlo!! 😊</p>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/majda_sobotka2024"
+                            <img src="./akce_foto/2024_jicin"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/johana_sobotka2024"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/klara_sobotka2024"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/ted_sobotka2024"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure> 
                     <figure class="img_container__part">
-                            <img src="./akce_foto/tina_sobotka2024"
+                            <img src="./akce_foto/2024_jicin2"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/verca_sobotka2024"
+                            <img src="./akce_foto/2024_jicin3"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin4"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin5"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin6"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin7"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin8"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin9"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin10"
+                                alt=""
+                                onclick="this.classList.toggle('workingImage'); openImg();">
+                        </figure>
+                     <figure class="img_container__part">
+                            <img src="./akce_foto/2024_jicin11"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
