--- a/2024.html
+++ b/2024.html
@@ -48,7 +48,10 @@
                 <h3 class="section_year__heading">2024</h3>
                 <article id="detskyden2024" class="section_year__article article_news">
                     <h4 class="article_news__heading">Dětský den 8.6.2024</h4>
-                    <p class="article_news__text">Opět se u nás pořádá dětský den. Všichni jsou srdečně zváni. Pro děi bude připraveno spoustu soutěží, také občerstvení a posezení. Děti se budou moct povozit na koni a vyhrát různé ceny. Těšíme se na Vás!</p>
+                    <p class="article_news__text">V sobotu 8.6.2024 jsme v naší stáji pro veřejnost pořádali Dětský den. 
+Tuhle akci jsme si vyzkoušeli již loni na podzim, kdy nám bohužel vůbec nepřálo počasí a návštěvníků dorazilo málo. Ale letos jsme si vážně spravili chuť. 😊
+Sešli jsme se ve stáji už ráno, nejdříve proběhl dokonalý úklid, pak organizace jednotlivých stanovišť, příprava občerstvení a parkoviště. V jednu hodinu se otevřela brána a my přivítali první rodiny s dětmi. Každý malý návštěvník dostal kartičku a postupně obešel 10 stanovišť, kdy na každém splnil veledůležitý úkol – třeba házel podkovou, prolézal pavučinou z lonží, skákal v pytli, vozil kolečko nebo trefoval míčkem terč. Vyplněnou kartičku odevzdal a mohl si vybrat dárek – na dračku šly hlavně gumoví hadi. Rodiče se zatím občerstvovali jídlem a pitím v našem stánku, děti pak odpočívaly u malování na obličej. Vrcholem bylo ale vodění na koních, kde se za drobný poplatek svezli nejen děti, ale často i dospělí. 
+Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase. </p>
                     <img src="./imgs/letak/Detsky den.png" alt="Letáček, který popusuje dětský den u koní, který se koná 8.6.2024">
                 </article>
                  <article id="detskyden2024" class="section_year__article article_news">
