--- a/sluzby.html
+++ b/sluzby.html
@@ -44,7 +44,7 @@
         <div class="main_sluzby__wrapper">
             <section class="section section_sluzby">
                 <h3 id="ustajeni" class="section__heading section_sluzby__heading section__heading--absolute">Ustájení</h3>
-                <p class="section__text section_sluzby__text section__text--border">Z důvadu plného obsazení našich boxů, není nyní ustájení v
+                <p class="section__text section_sluzby__text section__text--border">Z důvodu plného obsazení našich boxů není nyní ustájení v
                     nabídce!!</p>
     
                 <div class="section_sluzby__ustajeni ustajeni">
