--- a/sluzby.html
+++ b/sluzby.html
@@ -54,11 +54,11 @@
                         <div class="ustajeni__slider slider_ustajeni swiper-wrapper">
                             <div class="slider_ustajeni__item slider_item slider_item--mistovani swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                    <p class="slider_item__text">USTÁJENÍ V BOXE DENNĚ MÍSTOVANÉ PODESTÝLKA SLÁMOU</p>
+                                    <p class="slider_item__text">USTÁJENÍ V BOXE DENNĚ MÍSTOVANÉ, PODESTLANÉ SLÁMOU</p>
                                 </div>
                             <div class="slider_ustajeni__item slider_item slider_item--krmeni swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                <p class="slider_item__text">DVAKRÁT DENNĚ KRMENÍ - NAŠE MUSLI, OVES A DOPLŇKY
+                                <p class="slider_item__text">DVAKRÁT DENNĚ KRMENÍ - NAŠE MÜSLI, OVES A DOPLŇKY
                                     KRMENÍ(NADSTAVBY A VYJÍMKY JSOU NA DOMLUVĚ)</p>
                             </div>
                             <div class="slider_ustajeni__item slider_item slider_item--vybeh swiper-slide">
@@ -86,7 +86,7 @@
             </section>
             <section id="clenstvi" class="section section_clenstvi">
                 <h3 class="section__heading section__heading--absolute">Členství</h3>
-                <p class="section__text section__text--border">Opravdové nadšence a milovníky koní radi uvítáme mezi námi, jako členy v našem jezdeckém klubu.</p>
+                <p class="section__text section__text--border">Opravdové nadšence a milovníky koní rádi uvítáme mezi námi jako členy v našem jezdeckém klubu.</p>
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
                             src="./imgs/1718266779779a.JPG" alt="Fotografie členů klubu stáje JS Vydlákov na zasněžené jízdárně"></a>
                     <figcaption></figcaption>
@@ -94,7 +94,7 @@
             </section>
             <section class="section section_pronajem">
                 <h3 class="section__heading section__heading--absolute">Pronájem koní</h3>
-                <p class="section__text section__text--border">Nabízíme pronájem koní k vyjížďkám, na svatby, pro dětské oslavyapod., případné zakoupení permice, která zahrnuje 10 jízd - tríniků či vyjížděk u nás ve stáji.
+                <p class="section__text section__text--border">Nabízíme pronájem koní k vyjížďkám, na svatby, pro dětské oslavy apod., případné zakoupení permanentky, která zahrnuje 10 jízd - tréninků či vyjížděk u nás ve stáji.
                 </p>
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
                             src="./imgs/pronajem_koni_B.jpg" alt="Manželská fotografie na louce, manželka oblečená v bílých šatech jede na koni z naši stáje JS Vydlákov"></a>
