--- a/tabor.html
+++ b/tabor.html
@@ -48,9 +48,9 @@
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Základní informace:</h3>
             <ul class="section__list list_tabor">
-                <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech(pondělí až pátek)</li>
-                <li class="list_tabor__item">každý den začína v 8:00 a končí v 16:00 v areálu naší stáje
-                    Adresa: pod strání 131, Stráž nad Nisou</li>
+                <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek)</li>
+                <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje
+                    Adresa: Pod Strání 131, Stráž nad Nisou</li>
                 <li class="list_tabor__item">během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
@@ -82,7 +82,7 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item ">4 500,-/turnus (1 dítě)</li>
                 <li class="list_tabor__item">platba musí být provedena do <span
-                        class="list_tabor__item--bold">5.6.2024</span></li>
+                        class="list_tabor__item--bold">5.6.2024, po dohodě i později </span></li>
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
